--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -56,7 +56,7 @@ body {
     height: 95%;
     background-color: #FFF;
     border: 1px solid #CCC;
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto; 
 }
 
@@ -66,6 +66,8 @@ body {
     position: relative;
     display: none;
     padding: 15px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .scripts_workspace {
