--- a/development-bundle/themes/base/jquery.ui.base.css
+++ b/development-bundle/themes/base/jquery.ui.base.css
@@ -2,4 +2,5 @@
 @import url("jquery.ui.selectable.css");
 @import url("jquery.ui.accordion.css");
 @import url("jquery.ui.button.css");
+@import url("jquery.ui.dialog.css");
 @import url("jquery.ui.tabs.css");
