--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -54,7 +54,7 @@ body {
     bottom: 0px;
     width: 34.8%;
     height: 95%;
-    background-color: #FFF;
+    background-color: #888;
     border: 1px solid #CCC;
     overflow-x: auto;
     overflow-y: auto; 
