--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -69,7 +69,7 @@
 }
 
 .blockhead{
-  font-family: Georgia;
+  font-family: Trebuchet MS;
   font-size: 12px;
   white-space: nowrap;
   padding: 5px 20px;
