--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -37,29 +37,6 @@ body {
     background-color: #888;
 }
 
-@font-face
-{
-font-family: TriniganFGRegular;
-src: url('fonts/trinigan-webfont.ttf'),
-     url('fonts/trinigan-webfont.woff'),
-	 url('fonts/trinigan-webfont.eot');
-}
-
-#bearPic{
-	position: absolute;
-	margin-top: 3px;
-	margin-left: 10px;
-}
-
-#logo{
-	position: absolute;
-	font-size: 220%;
-	font-family: 'TriniganFGRegular';
-	margin-left: 75px;
-	margin-top: 1px;
-	color: black;
-}
-
 .content{
     position: relative;
     width: 200%;
@@ -122,7 +99,7 @@ src: url('fonts/trinigan-webfont.ttf'),
 	margin: 0;
 	padding: 0;
 	/*float: left;*/
-	font: 62.5% "Trebuchet MS", sans-serif; margin: 50px;
+	font: 62.5% "Trebuchet MS", sans-serif; margin: 0px;
 }
 
 .stage {
@@ -141,9 +118,9 @@ src: url('fonts/trinigan-webfont.ttf'),
     width: 14.5%;
     height: 100%;
     left: 0px;
-	top: 0px;
+    top: 0px;
     overflow: auto;
-	margin-top: 43px;
+	margin-top: 5px;
 	margin-left: 5px;
 }
 #accordion div{
@@ -276,7 +253,12 @@ src: url('fonts/trinigan-webfont.ttf'),
     background-color: #854D53; /*This is a redish color*/
     margin-top: .5em;
 }
-
+/*Used in the field used to search for blocks.*/
+/*TODO really lopsided right now, needs to be fixed.*/
+.search-field{
+	font-size:15px;
+	margin-top:.25em;
+}
  /* This last one might be a bit contreversial but I think that users shouldn't 
  need to realize that the stage is just off to the right of the workspace. This
  will also make it easier for others to diable the stage with just a css rule*/
