--- a/plugins/canvas.css
+++ b/plugins/canvas.css
@@ -18,8 +18,8 @@
 .math{ border-color: hsl(93,90%,66%); }
 .math > .block{ background-color: hsl(93,90%,76%); }
 
-.drawing{ border-color: #e66a22; }
-.drawing > .block{ background-color: #e66a22; }
+.drawing{ border-color: hsl(23,80%,51%); }
+.drawing > .block{ background-color: hsl(23,80%,65%); }
 
 .point{ border-color: hsl(90, 65%, 79%); }
 .point > .block {background-color: hsl(90, 62%, 89%); }
@@ -27,8 +27,8 @@
 .size{ border-color: hsl(15,100%,63%); }
 .size > .block{ background-color: hsl(15,100%,83%); }
 
-.rect{ border-color: hsl(150, 65%, 79%); }
-.rect > .block {background-color: hsl(150, 62%, 89%); }
+.shapes{ border-color: hsl(150, 65%, 79%); }
+.shapes > .block {background-color: hsl(150, 62%, 89%); }
 
 .image{ border-color: hsl(296, 65%, 57%); }
 .image > .block{ background-color: hsl(296, 65%, 77%); }
