--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -17,11 +17,13 @@ caption,th {
     text-align:left;
 }
 
-textarea, input {
+textarea {
 	width: 95%;
+	resize: none;
 }
-textarea{
-	resize: none
+input{
+	margin-left: 8px;
+	width: 93%;
 }
 	 
 h1,h2,h3,h4,h5,h6 {
@@ -42,7 +44,7 @@ html, body {
 
 body {
     background-color: #888;
-	font-size: 67.5%
+	font-size: 62.5%
 }
 
 ::-webkit-input-placeholder  { color:#AAA; font-style: italic;}
@@ -180,7 +182,7 @@ body {
 
 /*Description of saves*/
 .description{
-    font-size: 1em;
+    font-size: .8em;
     color: #515151;
 }
 
@@ -206,11 +208,8 @@ body {
 	font-size: 1.2em;
 	margin: .6em 0;
 }
-/*.dialog button {
-	float:right;
-}*/
 .ui-dialog .ui-state-error { padding: .3em; }
-
+.dialog .validateTips { border: 1px solid transparent; padding: 0.3em; }
 
 /* Save/Restore Dialogs 
 
@@ -302,5 +301,5 @@ html, body {
 /* Lists of scripts to scroll. Used in demo & restore dialog*/
 .scrollList{
     max-height: 300px;
-    overflow-y: auto;
+    overflow-y:scroll;
 }
