--- a/stylesheets/meadow.css
+++ b/stylesheets/meadow.css
@@ -8,42 +8,58 @@ body {
 	width: 100%;
 	min-width:800px;
 	min-height: 600px;
+	background-color: grey;
+}
+#toolbar {
+	float: right;
 }
 .content {
 	position: relative;
 	float: left;
 	width: 100%;
-	height: 100%;
 }
 
 .pane {
 	position: absolute;
-	border: 0px solid red;
 	font-size: 1.2em;
 	float: left;
-	width: 30%;
-	height: 1000px;
+	margin-top: 1%;
+	margin-bottom: 1%;
 }
 .panecontent {
-	margin: 2px;
+	width: 100%;
+	overflow: auto;
 }
 #pane1 {
-	background-color: #f66;
-	border-right: 3px solid pink;
+	margin-left: 1%;
+	width: 27%;
 }
 #pane2 {
-	background-color: #6f6;
-	margin-left: 30%;
+	margin-left: 29%;
+	width: 46%;
 }
 #pane3 {
-	width: 40%;
-	background-color: #66f;
-	margin-left: 60%;
-
+	width: 23%;
+	margin-left: 76%;
+	min-height: 400px;
 }
 
 #accordion {
 	padding: 0;
+}
+
+#workspace > div{
+	padding: 10px;
+}
+
+#scripts_text_view {
+	font-size: 1.2em;
+}
+
+#stage {
+	background-color: white;
+	min-height: 100px;
+	min-width: 100px;
 }
 
 .ui-tabs-hide {
