--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -14,7 +14,7 @@
 
 .locals{
     display: block;
-    background-color: white;
+    background-color: #CCC; /*here is the change*/
     width: auto;
     position: relative;
     padding: 1px 3px 1px;
@@ -150,14 +150,14 @@
 .slot {
     top: -7px;
     position: absolute;
-    background-color: #FFF;
+    background-color: #CCC;
     width: 20px;
 }
 
 
 .contained {
   display: block;
-  background-color: white;
+  background-color: #CCC;/*here is the change*/
   position: relative;
   padding-top: 1px;
   margin-left: 10px;
