--- a/stylesheets/meadow.css
+++ b/stylesheets/meadow.css
@@ -9,60 +9,106 @@ body {
 	min-width:800px;
 	min-height: 600px;
 	background-color: grey;
+	overflow-x: hidden;
 }
 
 ol,ul {
     list-style:none;
 }
 
-textarea{
+textarea {
 	width:95%;
 	resize: none
 }
 
-#toolbar {
-	float: right;
-}
-.content {
-	position: relative;
-	float: left;
-	width: 100%;
+@font-face
+{
+font-family: TriniganFGRegular;
+src: url('fonts/trinigan-webfont.ttf'),
+     url('fonts/trinigan-webfont.woff'),
+	 url('fonts/trinigan-webfont.eot');
 }
 
-.pane {
-	position: absolute;
-	font-size: 1.2em;
+#header {
+	clear: both;
 	float: left;
-	margin-top: 1%;
-	margin-bottom: 1%;
-}
-.panecontent {
 	width: 100%;
-	overflow: auto;
+	border-bottom: 1px solid black;
+	margin-bottom: 15px;
+	padding: 5px 0px 5px 0px;
 }
-#pane1 {
-	margin-left: 1%;
-	width: 27%;
+
+#logo{
+	font-size: 220%;
+	font-family: 'TriniganFGRegular';
+	float: left;
+	margin-left	: 5px;
 }
-#pane2 {
-	margin-left: 29%;
-	width: 46%;
+
+#toolbar {
+	display: inline;
+	float: right;
+	margin-right: 5px;
 }
-#pane3 {
-	width: 23%;
-	margin-left: 76%;
-	min-height: 400px;
+
+#colmask {
+	position:relative;		/* This fixes the IE7 overflow hidden bug and stops the layout jumping out of place */
+	clear:both;
+	float:left;
+	width:100%;				/* width of whole page */
+	overflow:hidden;		/* This chops off any overhanging divs */
+}
+#colmid {
+	float:left;
+	width:200%;
+	position:relative;
+	left:250px;
+}
+#colright {
+	float:left;
+	width:100%;
+	position:relative;
+	left:50%;
+	margin-left:-500px;
+}
+#col1wrap {
+	float:right;
+	width:50%;
+	position:relative;
+	right:100%;
+}
+#col1pad {
+	margin:0 25px 0 525px;
+	overflow:hidden;
+}
+#col1 {
+	width:100%;
+	overflow:hidden;
+}
+#col2 {
+	float:left;
+	width:200px;
+	position:relative;
+	margin-left:-50%;
+	left:275px;
+	overflow:hidden;
+}
+#col3 {
+	float:left;
+	width:200px;
+	position:relative;
+	left:25px;
+	overflow:hidden;
 }
 
 #accordion {
 	padding: 0;
 	text-decoration: none;
-	font: "Trebuchet MS", sans-serif;
+}
+.ui-accordion .ui-accordion-content {
+	padding: 5px;
 }
 
-#accordion * {
-	text-decoration: none;
-}
 #workspace > div{
 	padding: 10px;
 }
@@ -73,8 +119,7 @@ textarea{
 
 #stage {
 	background-color: white;
-	min-height: 100px;
-	min-width: 100px;
+	height: 200px;
 }
 
 .ui-tabs-hide {
@@ -106,9 +151,14 @@ textarea{
 	font-size: 1.2em;
 	margin: .6em 0;
 }
-.ui-dialog .ui-state-error { padding: .3em; }
-.dialog .validateTips { border: 1px solid transparent; padding: 0.3em; }
+.ui-dialog .ui-state-error { 
+	padding: .3em;
+}
 
+.dialog .validateTips {
+	border: 1px solid transparent;
+	padding: 0.3em;
+}
 
 #script_name {
 	width: 93%;
