--- a/stylesheets/meadow.css
+++ b/stylesheets/meadow.css
@@ -103,6 +103,7 @@ src: url('fonts/trinigan-webfont.ttf'),
 }
 
 #col3 {
+	width: 250px;
 	float:left;
 	position:relative;
 	left:5px;
@@ -136,15 +137,14 @@ src: url('fonts/trinigan-webfont.ttf'),
 }
 
 .stagesprite {
-	position: relative;
+	position: absolute;
 	height: 50px;
 	width: 50px;
 }
 
 #spritebank {
 	min-height: 290px;
-	margin-right: 60px;
-
+	width: 240px;
 }
 #spriteheader {
 	padding: 5px;
@@ -205,7 +205,7 @@ src: url('fonts/trinigan-webfont.ttf'),
 	padding: 0.3em;
 }
 
-#script_name {
+.diaginput {
 	width: 93%;
 }
  
