started some tab stuff

--- a/stylesheets/blocks.css
+++ b/stylesheets/blocks.css
@@ -102,6 +102,10 @@
     display: block;
 }
 
+.containerBlock {
+	overflow: visible;
+}
+
 .containerBlock > .blockhead{
     padding: 5px 20px;
     padding-bottom: 6px;
